# bomberman-rust-tournament

bots/src/bot/: gz_bot.rs
bots/src/bot/gz_logic/: tile.rs
cli/: Cargo.toml
cli/benches/: bot_benchmark.rs  tournament_benchmark.rs
game/src/map/: map.rs
game/src/map/structs/: map_config.rs
tournament/: Cargo.toml
tournament/src/factories/: game_config_factory.rs
